[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rmq-utils"
version = "0.1.0"
description = "Utilities for accessing RabbitMQ message broker"
dependencies = [
    "pydantic",
    "pika",
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


# pip install git+https://github.com/your_username/your_project_name.git

# [build-system]
# requires = ["setuptools", "wheel"]
# build-backend = "setuptools.build_meta"


# [project.urls]
# homepage = "https://github.com/your_username/your_project_name"

